# forgecode

./: .env.example  .gitignore  FORGECODE_HANDOFF.md  README.md  pyproject.toml
evals/: __init__.py  runner.py
evals/cases/: java-order-service-001.yaml  typescript-todo-001.yaml
examples/: mcp_web_fetch_server.py
fixtures/java-order-service/: README.md  pom.xml
fixtures/python-calculator/: README.md  pyproject.toml
fixtures/python-calculator/src/calculator/: __init__.py  core.py
fixtures/python-calculator/tests/hidden/: test_divide_hidden.py
fixtures/python-calculator/tests/public/: test_calculator.py
fixtures/typescript-todo/: README.md  package-lock.json  package.json  tsconfig.json
forge/: cli.py  config.py  terminal.py
forge/context/: compactor.py  manager.py  repository.py  working.py
forge/hooks/: __init__.py  builtin.py  registry.py  state.py
forge/mcp/: __init__.py  client.py
forge/prompts/: system.md
forge/runtime/: agent_loop.py  background.py  completion.py  intent.py  model_client.py  state.py  team.py  tool_executor.py  workspace.py
forge/sessions/: store.py  trajectory.py
forge/tasks/: __init__.py  graph.py
forge/tools/: __init__.py  base.py  filesystem.py  git.py  mcp.py  memory.py  patch.py  search.py  shell.py  subagent.py  task.py  task_graph.py  team.py  todo.py  verify.py
game/: README.md  app.js  game.js  index.html  style.css  styles.css
game/src/: app.js  styles.css
tests/: test_cli.py  test_config.py  test_terminal.py
tests/context/: test_compactor.py  test_manager.py  test_repository.py  test_summary.py  test_working.py
tests/evals/: test_runner.py
tests/hooks/: test_registry.py
tests/mcp/: test_client.py
tests/runtime/: test_agent_loop.py  test_intent.py  test_m2_agent_loop.py  test_model_boundary.py  test_model_client.py  test_tool_executor.py  test_workspace_completion.py
tests/sessions/: test_store.py  (+1 more)
(+16 files in other folders)
