[build-system]
requires = ['setuptools>=68']
build-backend = 'setuptools.build_meta'

[project]
name = 'forge-code'
version = '0.1.0'
description = 'A terminal-based Agent Harness for reliable software engineering tasks.'
readme = 'README.md'
requires-python = '>=3.12'
dependencies = [
    'anthropic>=0.116,<0.117',
    'pydantic>=2.12,<3',
    'prompt-toolkit>=3.0,<4',
    'python-dotenv>=1,<2',
    "rich>=13,<15",
    'typer>=0.9,<1.0',
]

[project.scripts]
forge = 'forge.cli:app'

[tool.setuptools.packages.find]
include = ['forge*', 'evals*']

[tool.setuptools.package-data]
forge = ['prompts/*.md']

[tool.pytest.ini_options]
testpaths = ['tests']

[dependency-groups]
dev = [
    'pyyaml>=6,<7',
    "pytest>=9.1.1",
]
