[build-system]
requires = ['setuptools>=68']
build-backend = 'setuptools.build_meta'

[project]
name = 'forge-fixture-python-calculator'
version = '0.1.0'
description = 'A reproducible Python bug fixture for ForgeCode evaluations.'
requires-python = '>=3.12'

[tool.setuptools.packages.find]
where = ['src']

[tool.pytest.ini_options]
testpaths = ['tests/public']
pythonpath = ['src']

[dependency-groups]
dev = [
    'pytest>=9.1.1',
]
